Fixed alignment related issues

--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,7 @@ textarea {
   font-weight: bold;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
+
+#preview {
+  padding: 0 1.7rem;
+}
